# ICICI-Bank-Internship

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  app.py  config.py  frontend.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
agents/: agents.json  attendance_agent.py  chatbot_agent.py  complaint_agent.py  employee_agent.py  langgraph_orchestrator.py  leave_agent.py
frontend_consolidated/static/: style.css
frontend_consolidated/templates/: chat.html  login.html
monitoring/: dashboard.json
scripts/: export_schema.py
setup/: export_data.py  fix_attendance_sequence.py  import_data.py  init_db.py  setup_document_search.py
src/: main.py
src/monitoring/: metrics.py
src/utils/: orchestrator.py
tests/: test_api.py  test_metrics.py  test_parser.py
utils/: email_client.py  gemma.py  gemma_client.py  gps_utils.py  groq_client.py  memory.py  postgres_client.py  retry_decorator.py  scheduler.py
