[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "icici-agentic-hr-chatbot"
version = "1.0.0"
description = "Production-grade data engineering and AI pipeline."
requires-python = ">=3.10"
license = {{text = "MIT"}}
authors = [
    {{name = "Tanay Agarwal", email = "tanaynilesh@gmail.com"}}
]
readme = "README.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
